src/objects/Idea.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <formula>Now () - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a custom formula field that calculates the number of days since an idea was submitted.</inlineHelpText>
        <label>(# of Days)     Idea Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <formula>CASE ( CreatedBy.Profile.UserType, &quot;Standard&quot;, $Organization.Name, CreatedBy.Contact.Account.Name )</formula>
        <label>Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <formula>CASE ( CreatedBy.Profile.UserType, &quot;Standard&quot;,  CreatedBy.Department,  CreatedBy.Contact.Department )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Contact__c</fullName>
        <description>Employee responsible for seeing the Idea through</description>
        <label>Email Contact</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>IdeasInAction__c</fullName>
        <inlineHelpText>This is a place where the moderator can leave comments about this idea.</inlineHelpText>
        <label>Update</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <formula>CreatedBy.Profile.Name</formula>
        <label>Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Have we turned this idea into a project?</inlineHelpText>
        <label>Project</label>
        <referenceTo>Ideas_Projects__c</referenceTo>
        <relationshipLabel>Related Ideas</relationshipLabel>
        <relationshipName>Related_Ideas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <formula>IMAGE( CASE(   NumComments , 1, &quot;/img/samples/stars_100.gif&quot;, 2, &quot;/img/samples/stars_200.gif&quot;, 3, &quot;/img/samples/stars_300.gif&quot;, 4, &quot;/img/samples/stars_400.gif&quot;, 5, &quot;/img/samples/stars_500.gif&quot;, &quot;/img/samples/stars_000.gif&quot;), &quot;number of comments&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of stars is based on the number of comments added.</inlineHelpText>
        <label>Score</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>What is the status of this idea?</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Yet Reviewed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Under Consideration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coming Soon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewed, But Not Feasible At this Time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submitted_By__c</fullName>
        <formula>CreatedBy.FirstName  &amp; &quot; &quot;&amp; CreatedBy.LastName</formula>
        <label>Submitted By</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Ideas_Last_7_Days</fullName>
        <columns>IDEA.CREATED_DATE</columns>
        <columns>IDEA.TITLE</columns>
        <columns>IDEA.CREATED_BY_NICKNAME</columns>
        <columns>VOTE_STATS.WEIGHTED_SUM</columns>
        <columns>IDEA.NUM_COMMENTS</columns>
        <columns>IDEA.STATUS</columns>
        <columns>IDEA.CATEGORIES</columns>
        <columns>COMMUNITY.NAME</columns>
        <columns>IDEA.IDEA_THEME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IDEA.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>Last 7 Days</label>
    </listViews>
    <recordTypes>
        <fullName>InternalIdeasIdeaRecordType</fullName>
        <active>true</active>
        <description>Record Type used to associate ideas with a specific community</description>
        <label>Internal Ideas: Idea Record Type</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>